Buttons css style

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,61 @@
 .logo{
   width: 200px;
+}
 
+body{
+  font-family: 'montserrat', sans-serif;
+}
+
+h1, h2, h3{
+  font-weight: 900;
+}
+
+h4, h5, h6{
+  font-weight: 700;
+}
+/*Buttons*/
+.btn-outline-secondary {
+  background-color: transparent !important;
+  border-color: #011627 !important;
+  color: #011627 !important;
+  border-radius: 0 !important;
+  position: relative;
+}
+
+.btn-outline-secondary::before{
+  content: "";
+  position: absolute;
+  background-color: #83f3ed;
+  top:0;
+  left:0;
+  height: 100%;
+  width: 0%;
+  z-index: -1;
+  transition: 0.5s;
+}
+
+.btn-outline-secondary:hover:before{
+  width: 100%;
+}
+
+.btn-secondary{
+  background: #011627 !important;
+  border-radius: 0 !important;
+  border-color: #011627 !important;
+}
+
+.btn-secondary:hover{
+  color: #83f3ed !important;
+}
+
+.btn-primary{
+  background: #83f3ed !important;
+  border-radius: 0 !important;
+  border-color: #83f3ed !important;
+  color: #011627 !important;
+}
+
+.btn-primary:hover{
+  background: #011627 !important;
+  color: #83f3ed !important;
 }
